of the mean estimate.
+ Make sure that Fisher scoring does not converge to unrealistically
large values of mu
+ Fix minor bug in test_de() concerning the calculation of the degree
of freedom
+ Improve vignette/Readme: add section on differential expression
analysis with Kang et al. (2018) as example data
+ `glm_gp` returns the Offset matrix and bug fix for test_de() if a
offset was specified
+ Add CITATION file


Version 1.2 (2020-11-09)
+ Remove dual likelihood functions for overdispersion estimation.
Instead merge functionality into conventional_***. This should
cause no user facing changes, however should make it easier to
maintain the package
+ Make conventional_score_function_fast() more robust to extreme
inputs. Avoid numerically imprecise subtractions and employ
bounds based on series expansions for very small input
+ If dispersion estimate quits because there is no maximum or
all y are 0, return iterations = 0
+ Add limits (1e-16 / 1e16) for nlminb estimates of the
dispersion. This protects against errors due to NA's in
the conventional_likelihood_fast
+ Automatically set 'size_factors = FALSE' for input with
0 or 1 row. This will change the estimated beta, but not the
mu's
+ Rename gampoi_overdispersion_mle() -> overdispersion_mle()
+ Store data in the object returned by glm_gp()
+ Remove Y from the interface of residuals.glmGamPoi, because
I can just get it directly from fit$data
+ Add function test_de() that does a quasi-likelihood ratio
test to detect differentially expressed genes
+ Add functionality to make a pseudobulk test directly
from test_de() by aggregating the data around one column
+ In group-wise beta estimation, fall back to optimize()
if the Newton method fails
+ Change the default size factor estimation method from
"poscounts" to "normed_sum" and provide an easy way to
call scran::calculateSumFactors()
+ New "global" mode for dispersion estimation


Changes in version 0.0.99 (2020-03-23)
+ Submitted to Bioconductor